plugins {
    id 'java'
}

group = 'uk.me.bswales.tracker'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.5'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'com.github.crazzyghost:alphavantage-java:1.8.0'
    implementation 'org.xerial:sqlite-jdbc:3.45.3.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'top.cptl:tiingo4j:1.3'
}

test {
    useJUnitPlatform {
        excludeTags 'api-test', 'USA'
    }
}
